--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,5 +1,5 @@
 :root {
-  --footer-bg: #8556ac;
+  --footer-bg: #66338f;
   --footer-text: white;
   --footer-description: white;
   --footer-border: white;
