--- a/src/css/Analytics_Dashboard.css
+++ b/src/css/Analytics_Dashboard.css
@@ -10,6 +10,10 @@
   background: #ebe9f1;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
   color: black;
+  margin-top: -65px;
+ 
+  margin-right: -30px !important; /* Avoid extra margin */
+  
 }
 
 .dashboard-container .bg-white {
@@ -72,7 +76,7 @@
 
 .summary-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
 }
