--- a/src/css/Calendar.css
+++ b/src/css/Calendar.css
@@ -16,6 +16,8 @@
   color: #333;
   border: 1px solid #e5e5e5;
   font-family: 'Segoe UI', sans-serif;
+  margin-right: -30px;
+
 }
 
 /* Header styling */
@@ -74,7 +76,8 @@
   font-size: 2rem;
   font-weight: bold;
   color: #9d4edd;
-  margin-top: -30px;
+  margin-top: -50px;
+
 }
 
 .purple-button {
