--- a/src/css/Aboutus.css
+++ b/src/css/Aboutus.css
@@ -37,11 +37,11 @@
 
 .about-us-cta-button {
   padding: 0.75rem 1.5rem;
-  background-color: #ffffff;
-  color: rgb(24, 23, 23);
+  background-color: white;
+  color: black;
   border: 2px solid white;
   border-radius: 8px;
-  font-size: 1.3rem;
+  font-size: 1rem;
   cursor: pointer;
   transition: background 0.3s ease, transform 0.3s ease;
 }
@@ -163,7 +163,7 @@
 }
 /* Team Section Container */
 .about-us-team-section {
-  background: linear-gradient(135deg, #b35ec8, #a884b3);
+  background: linear-gradient(135deg, #ca91d8, #dcd7de);
   padding: 4rem 2rem;
   text-align: center;
   animation: aboutUsFadeInUp 1s ease forwards;
@@ -176,7 +176,7 @@
   font-size: 4.5rem;
   font-weight: 900;
   margin-bottom: 3rem;
-  color: white;
+  color: rgb(91, 7, 91);
   text-shadow: 1px 1px 2px #b39ddb;
 }
 
@@ -186,7 +186,6 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 2.5rem;
-
 }
 
 /* Individual Team Card */
@@ -272,6 +271,3 @@
     transform: translateY(0);
   }
 }
-
-
-
